apps/grafana/base/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-external
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.charn.io
    secretName: charn-io-wildcard-tls
  rules:
  - host: grafana.charn.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
